Criando Página de Relatório

--- a/base/templates/navbar.html
+++ b/base/templates/navbar.html
@@ -17,7 +17,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Relatório</a>
+                    <a class="nav-link" href="{% url 'reports' %}">Relatório</a>
                 </li>
 
                 <li class="nav-item dropdown">
